# rust_projects

./: README.md
echor/: Cargo.toml
echor/src/: main.rs
echor/tests/: cli.rs
grss/: Cargo.toml  README.md  myfile.txt
grss/src/: lib.rs  main.rs
grss/tests/: cli.rs
